# berrywiki

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS  README.md
.claude/agents/: berrywiki-haiku.md  berrywiki-opus.md  berrywiki-sonnet.md
.claude/workflows/: berrywiki-slice.js
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  funding.yml
.github/workflows/: ci.yml  pages.yml
api/zig-unified-hexdeca-api/: build.zig  build.zig.metadata.json
api/zig-unified-hexdeca-api/src/: main.zig  main.zig.metadata.json
crates/berrywiki-appstate/: Cargo.toml
crates/berrywiki-appstate/src/: journal.rs  lib.rs  lock.rs
crates/berrywiki-cli/: Cargo.toml
crates/berrywiki-cli/src/: lib.rs  main.rs
crates/berrywiki-core/: Cargo.toml
crates/berrywiki-core/src/: graph.rs  lib.rs  metadata.rs  page.rs  sidebar.rs
crates/berrywiki-core/tests/: fixture_wiki.rs
crates/berrywiki-draft/: Cargo.toml
crates/berrywiki-draft/src/: lib.rs
crates/berrywiki-git/: Cargo.toml
crates/berrywiki-git-compat/: Cargo.toml
crates/berrywiki-git-compat/src/: lib.rs
crates/berrywiki-git-compat/tests/: conflicts.rs
crates/berrywiki-git/src/: lib.rs
crates/berrywiki-git/tests/: audit.rs  engine.rs
crates/berrywiki-github/: Cargo.toml
crates/berrywiki-github/src/: lib.rs
crates/berrywiki-render/: Cargo.toml
crates/berrywiki-render/src/: lib.rs
crates/berrywiki-serve/: Cargo.toml
crates/berrywiki-serve/src/: lib.rs
crates/berrywiki-store/: Cargo.toml
crates/berrywiki-store/src/: error.rs  lib.rs  local.rs  paths.rs
crates/berrywiki-store/tests/: local_store.rs
crates/berrywiki-sync/: Cargo.toml
crates/berrywiki-sync/src/: lib.rs
crates/berrywiki-sync/tests/: structural.rs  sync.rs
crates/cherrywiki-core/: Cargo.toml
crates/cherrywiki-core/src/: diagnostics.rs  graph.rs  lib.rs  metadata.rs  sidebar.rs
crates/cherrywiki-core/tests/: fixture_wiki.rs
docs/architecture/: implementation-plan.adoc  overview.adoc  phase-0-plan.adoc
docs/compatibility/: github-wiki.adoc
docs/decisions/: 0001-page-filename-strategy.adoc  0002-authentication-strategy.adoc  0003-implementation-language.adoc  0004-metadata-format.adoc  0005-ui-technology.adoc  0006-draft-model.adoc  0008-safe-mutation-and-app-state.adoc  0009-git-sync-engine.adoc  0010-sync-layer.adoc
docs/development/: ci.adoc  review-2026-07-11-store.adoc
docs/execution/: work-packages.adoc
fixtures/test-wiki/: Archived-Old-Page.md  Home.md  Malformed-Metadata.md  Plain-Legacy-Page.md  Research--Project-X.md  Research.md  Sandbox-Unicode-and-Spaces.md  Teaching--Course-A--Assessment-Plan.md  Teaching--Course-A.md  Teaching.md  _Sidebar.md
scaffold/: .git-seo.yml  Home.md
