[workspace]
resolver = "2"
members = [
    "crates/berrywiki-core",
    "crates/berrywiki-git-compat",
    "crates/berrywiki-store",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/metadatastician/berrywiki"

[profile.release]
lto = true
