[workspace]
resolver = "2"
members = [
    "crates/berrywiki-appstate",
    "crates/berrywiki-cli",
    "crates/berrywiki-core",
    "crates/berrywiki-draft",
    "crates/berrywiki-git",
    "crates/berrywiki-git-compat",
    "crates/berrywiki-github",
    "crates/berrywiki-render",
    "crates/berrywiki-serve",
    "crates/berrywiki-store",
    "crates/berrywiki-sync",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/metadatastician/berrywiki"

[profile.release]
lto = true
